# llvm-project

mlir/tools/: CMakeLists.txt
mlir/tools/mlir-ocl-runner/: CMakeLists.txt
